--- a/static/css/base.css
+++ b/static/css/base.css
@@ -99,3 +99,11 @@
 .button:hover {
     background-color: #2a1a8a;
 }
+
+.headline {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 20px 0; 
+}
