--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,7 +43,7 @@
 }
 
 .question-container {
-    border: 2px solid #3a24b6;
+    border: 2px solid orange;
     border-radius: 10px;
     padding: 15px;
     margin: 10px;
@@ -66,7 +66,7 @@
 }
 
 .result-container {
-    border: 2px solid #3a24b6;
+    border: 2px solid orange;
     border-radius: 10px;
     padding: 15px;
     margin: 10px;
